--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@emotion/cache": "11.7.1",
     "@emotion/react": "11.7.1",
     "@emotion/styled": "11.6.0",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "5.4.1",
     "@mui/material": "5.4.1",
     "@mui/styled-engine": "5.4.1",
@@ -29,9 +30,9 @@
     "chart.js": "3.4.1",
     "chroma-js": "2.4.2",
     "prop-types": "15.8.1",
-    "react": "17.0.2",
+    "react": "^18.0.2",
     "react-chartjs-2": "3.0.4",
-    "react-dom": "17.0.2",
+    "react-dom": "^18.0.2",
     "react-github-btn": "1.2.1",
     "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0",
