--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@usedapp/core": "^1.1.5",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "ethers": "^5.6.9",
     "react": "^18.2.0",
