--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@testing-library/user-event": "^13.5.0",
     "@usedapp/core": "^1.1.5",
     "alchemy-sdk": "^2.0.4",
+    "api": "^4.5.2",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "ethers": "^5.6.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-ipfs-image": "^0.6.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^4.0.3",
     "web-vitals": "^2.1.4",
