add date pickers
npm install dayjs --save
npm install @mui/x-date-pickers

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.10.1",
+    "@mui/x-date-pickers": "^5.0.4",
+    "@tabuckner/material-dayjs-adapter": "^2.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +20,7 @@
     "api": "^4.5.2",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "dayjs": "^1.11.5",
     "ethers": "^5.6.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
