--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@ethersproject/contracts": "^5.7.0",
-    "@material-ui/core": "^4.12.4",
+    "@material-ui/core": "5.0.0-alpha.24",
+    "@material-ui/lab": "5.0.0-alpha.24",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.102",
     "@mui/material": "^5.10.1",
     "@mui/x-date-pickers": "^5.0.4",
     "@tabuckner/material-dayjs-adapter": "^2.0.0",
