--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@emotion/styled": "^11.10.0",
     "@ethersproject/contracts": "^5.7.0",
     "@material-ui/core": "5.0.0-alpha.24",
-    "@material-ui/lab": "5.0.0-alpha.24",
     "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "5.0.0-alpha.24",
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.102",
     "@mui/material": "^5.10.1",
@@ -24,10 +24,12 @@
     "bootstrap": "^5.1.3",
     "dayjs": "^1.11.5",
     "ethers": "^5.6.9",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-ipfs-image": "^0.6.0",
+    "react-moment": "^1.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^4.0.3",
     "web-vitals": "^2.1.4",
